experimental/parser/testdata/lexer/braces/stray-open.proto.stderr.txt
error: encountered unmatched `[` delimiter
  --> testdata/lexer/braces/stray-open.proto:2:5
   |
 2 |     [
   |     ^ expected a closing `]`

encountered 1 error